PyMaker/datas/object2/RawHTML/i19501/Python_DOC_referPages.changing-password-using-pexpect-and-passwd-non-interactivly.txt
<div class="post-text" itemprop="text">
<p>I am trying to learn python to change users password non-interactively but nothing seems to be working.<br/>
<code>pexepect</code> module of python seems promising, so I am just trying to use it.<br/>
This <a href="http://linux.byexamples.com/archives/346/python-how-to-access-ssh-with-pexpect/" rel="nofollow">tutorial</a> is nice but it does not work.<br/>
There's lots of code on Internet regarding this but none of them seems to work.<br/>
And nor does my code:</p>
<pre><code>#!/usr/bin/python
import pexpect
import time
def ChangePassword(user, pass):
    passwd = pexpect.spawn("/usr/bin/passwd %s" % user)

    for x in xrange(2):
        # wait for password: to come out of passwd's stdout
        passwd.expect("password: ")
        # send pass to passwd's stdin
        passwd.sendline(pass)
        time.sleep(0.1)

ChangePassword('rajesh', 'bar') # changes user "foo"'s password to "bar"
</code></pre>
<p>Error:</p>
<pre><code>bash-3.00# ./solpas7.py
  File "./solpas7.py", line 4
    def ChangePassword(user, pass):
                                ^
SyntaxError: invalid syntax
</code></pre>
<p>EDIT : i changed pass to pa but not i am getting a lot and the password does not changes.</p>
<pre><code>bash-3.00# ./solpas7.py
Traceback (most recent call last):
  File "./solpas7.py", line 14, in ?
    ChangePassword('rajesh', 'bar') # changes user "foo"'s password to "bar"
  File "./solpas7.py", line 9, in ChangePassword
    passwd.expect("password: ")
  File "/usr/lib/python2.4/site-packages/pexpect.py", line 1311, in expect
    return self.expect_list(compiled_pattern_list, timeout, searchwindowsize)
  File "/usr/lib/python2.4/site-packages/pexpect.py", line 1325, in expect_list
    return self.expect_loop(searcher_re(pattern_list), timeout, searchwindowsize                                              )
  File "/usr/lib/python2.4/site-packages/pexpect.py", line 1409, in expect_loop
    raise TIMEOUT (str(e) + '\n' + str(self))
pexpect.TIMEOUT: Timeout exceeded in read_nonblocking().
&lt;pexpect.spawn object at 0x80e306c&gt;
version: 2.3 ($Revision: 399 $)
command: /usr/bin/passwd
args: ['/usr/bin/passwd', 'rajesh']
searcher: searcher_re:
    0: re.compile("password: ")
buffer (last 100 chars): New Password:
before (last 100 chars): New Password:
after: pexpect.TIMEOUT
match: None
match_index: None
exitstatus: None
flag_eof: False
pid: 4683
child_fd: 3
closed: False
timeout: 30
delimiter: pexpect.EOF
logfile: None
logfile_read: None
logfile_send: None
maxread: 2000
ignorecase: False
searchwindowsize: None
delaybeforesend: 0.05
delayafterclose: 0.1
delayafterterminate: 0.1
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You can't use <a href="http://docs.python.org/3/reference/simple_stmts.html#pass" rel="nofollow"><code>pass</code></a> as a variable name. It's a reserved keyword.</p>
<p>Edit:
pexpect is waiting for the string <code>"password: "</code> but as you can tell from the error message <code>passwd</code> outputs <code>"New Password: "</code> (note the capital p) on your system.</p>
<pre><code>buffer (last 100 chars): New Password:
before (last 100 chars): New Password:
</code></pre>
<p>Instead of <code>passwd.expect("password: ")</code> you need to use <code>passwd.expect("Password: ")</code>.</p>
</div>
<div class="post-text" itemprop="text">
<p>You can also use this to make your search case insensitive:  </p>
<pre><code>passwd.expect('(?i)password:')    
</code></pre>
</div>
<span class="comment-copy"><code>pass</code> is a reserved keyword ;) Using something else will at least remove the syntax error.</span>
<span class="comment-copy">this is what i did just now <code>bash-3.00# passwd rajesh New Password: Re-enter new Password: passwd: password successfully changed for rajesh</code></span>
<span class="comment-copy">is it looking for the string <code>New Password:</code> and Re-enter new Password:`</span>
<span class="comment-copy">no i just used the usual passwd command on command line</span>
<span class="comment-copy">See my answer. I just updated it.</span>
<span class="comment-copy">,thanks a lot, it works. i need to learn a lot more</span>
